feat: boolean question feature added

--- a/host_authentication_system/templates/host_auth_system/change_password.html
+++ b/host_authentication_system/templates/host_auth_system/change_password.html
@@ -1,25 +1,41 @@
 {% extends "base.html" %}
 
 {% block title %}
-    <title> Change Password </title>
+    <title>Change Password</title>
 {% endblock title %}
 
 {% block content %}
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-7">
+            <div class="card">
+                <div class="card-body">
+                    <h2 class="card-title text-center">Change Password</h2>
 
-    {% if form.non_field_errors %}
-        {% for error in form.non_field_errors %}
-            <p> {{ error | striptags }} </p> 
-        {% endfor %}
-    {% endif %}
+                    {% if form.non_field_errors %}
+                        <div class="alert alert-danger" role="alert">
+                            {% for error in form.non_field_errors %}
+                                {{ error | striptags }}
+                            {% endfor %}
+                        </div>
+                    {% endif %}
 
-    <form action="" method="POST">
-        {% csrf_token %}
-        {% for fm in change_password_form %}
-            {{ fm.label_tag }} {{ fm }} {{ fm.errors | striptags  }} <br> <br>
-        {% endfor %}
-        <br>
-        <button type="submit">Change Password</button>
-    </form>
-    <br>
-    <a href="{% url "profile" %}">Profile Page</a>
+                    <form action="" method="POST" novalidate>
+                        {% csrf_token %}
+                        {% for fm in change_password_form %}
+                            <div class="form-group">
+                                <label class="col-4" for="{{ fm.id }}">{{ fm.label_tag }}</label>
+                                {{ fm }}
+                                <small class="text-danger col-2">{{ fm.errors | striptags }}</small>
+                            </div>
+                        {% endfor %}
+                        <div class="form-group text-center">
+                            <button type="submit" class="btn btn-primary">Change Password</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
