--- a/host_authentication_system/templates/host_auth_system/wait.html
+++ b/host_authentication_system/templates/host_auth_system/wait.html
@@ -5,6 +5,19 @@
 {% endblock title %}
 
 {% block content %}
-    <h1>You cannot login right now, Admin will check if you are Host or Not </h1>
-    <a href="{% url "homepage" %}">HomePage</a>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="card-title text-center">Please Wait</h1>
+                    <p class="card-text text-center">You cannot log in right now. An admin will check if you are a host or not.</p>
+                    <div class="text-center mt-4">
+                        <a href="{% url "homepage" %}" class="btn btn-primary">Go to Homepage</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
