--- a/quiz_attempter_management/templates/quiz_attempter_management/announcements.html
+++ b/quiz_attempter_management/templates/quiz_attempter_management/announcements.html
@@ -1,30 +1,31 @@
 {% extends "base.html" %}
 
 {% block title %}
-    <title> Announcement </title>
-    <head>
-        <style>
-            .announcement{
-                border: 2px solid black;
-                margin-bottom: 5px;
-            }
-            span{
-                color: red;
-            }
-        </style>
-    </head>
+    <title>Announcement</title>
 {% endblock title %}
 
-{% block content %}
-    {% if announcements %}
-        {% for announcement in announcements %}
-            <div class="announcement">
-               <span>Subject: </span> <h3> {{ announcement.subject }} </h3>
-                <span>Details: </span><h4>{{announcement.details}}</h4>
-            </div>
-        {% endfor %}
-    {% else %}
-    <h2>There are no announcements </h2>
-    {% endif %}
+{% block nav_elements %}
     <a href="{% url "showquizzes" %}">Show Quizzes</a>
+    <a href="{% url "logout" %}">Logout</a>
+{% endblock nav_elements %}
+
+{% block content %}
+    <div class="container mt-5">
+        <h1 class="text-center">Announcements</h1>
+
+        {% if announcements %}
+            {% for announcement in announcements %}
+                <div class="card announcement mb-3">
+                    <div class="card-body">
+                        <h4 class="card-title"><span class="text-danger">Subject:</span> {{ announcement.subject }}</h4>
+                        <p class="card-text"><span class="text-danger">Details:</span> {{ announcement.details }}</p>
+                    </div>
+                </div>
+            {% endfor %}
+        {% else %}
+            <div class="alert alert-info mt-3">
+                <h2>There are no announcements</h2>
+            </div>
+        {% endif %}
+    </div>
 {% endblock content %}
