--- a/quiz_management/templates/quiz_management/add_quiz_attempter.html
+++ b/quiz_management/templates/quiz_management/add_quiz_attempter.html
@@ -4,27 +4,71 @@
     <title>Add Quiz Attempter</title>
 {% endblock title %}
 
+
+{% block nav_elements %}
+    <a href="{% url "draftquizzes" %}">Draft Quizzes</a>
+    <a href="{% url "profile" %}">Profile</a>
+{% endblock nav_elements %}
+
+
+
 {% block content %}
-    <form action="" method='POST' enctype="multipart/form-data" novalidate>
-        {% csrf_token %}
-        <h1>Add by email</h1>
-        {{ quiz_attempter_form }}
-        <h1>Add by uploading file</h1>
-        <input type="file" name="students_emails_file">
-        <br>
-        <input type="submit" value="Add">
-    </form>
+<div class="text-center">
+    <div class="card mx-auto" style="max-width: 600px;">
+        <div class="card-body">
+            <form action="" method="POST" enctype="multipart/form-data" novalidate>
+                {% csrf_token %}
+                <h1 class="card-title text-center mb-4">Add by Email</h1>
+                <div class="form-group row">
+                <label for="id_email" class="col-sm-3 col-form-label">{{ quiz_attempter_form.email.label_tag }}</label>
+                <div class="col-sm-6">
+                    {{ quiz_attempter_form.email }}
+                </div>
+                <div class="col-sm-3">
+                    <button type="submit" class="btn btn-primary">Add</button>
+                </div>
+            </div>
+
+                <h2 class="card-title text-center mt-4">Add by Uploading File</h2>
+                <div class="form-group">
+                    <div class="custom-file">
+                        <input type="file" class="custom-file-input" id="studentsEmailsFile" name="students_emails_file">
+                        <label class="custom-file-label" for="studentsEmailsFile">Choose file</label>
+                    </div>
+                </div>
+                <input class="btn btn-primary" type="submit" value="Add">
+            </form>
+        </div>
+    </div>
+</div>
+
+
     <br> <br>
     <br> <br>
 
     {% if quiz_attempters %}
+<table class="table table-striped table-bordered">
+    <thead class="thead-dark">
+        <tr>
+            <th>Username</th>
+            <th>Email</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
         {% for quiz_attempter in quiz_attempters %}
-            {{ quiz_attempter.quiz_attempter.username }} || {{ quiz_attempter.quiz_attempter.email }} </a> <br> <br>
+            <tr>
+                <td>{{ quiz_attempter.quiz_attempter.username }}</td>
+                <td>{{ quiz_attempter.quiz_attempter.email }}</td>
+                <td>
+                    <a href="{% url "deletequizattempter" quiz_attempter.quiz_attempter.id quiz_id %}" class="btn btn-danger">Delete</a>
+                </td>
+            </tr>
         {% endfor %}
-    {% else %}
-    <h3>No quiz attempter added</h3>
-    {% endif %}
+    </tbody>
+</table>
+{% else %}
+<h3 class="text-center">No quiz attempter added</h3>
+{% endif %}
 
-
-    <a href="{% url "draftquizzes" %}">Draft Quizzes</a>
 {% endblock content %}
