--- a/quiz_management/templates/quiz_management/announcement.html
+++ b/quiz_management/templates/quiz_management/announcement.html
@@ -5,30 +5,64 @@
     <title>Announcement</title>
 {% endblock title %}
 
+{% block nav_elements %}
+    <a href="{% url "draftquizzes" %}">Draft Quizzes</a>
+    <a href="{% url "profile" %}">Profile</a>
+{% endblock nav_elements %}
+
 
 {% block content %}
-    <form action="" method="POST" novalidate>
-        {% csrf_token %}
-        {% for form_details in announcement_form  %}
-            {{ form_details.label_tag }} {{ form_details }} {{ form_details.errors }} <br> <br>
-        {% endfor %}
-        <input type="submit" value="Announce">
-    </form>
+        <div class="container mt-5">
+            <div class="container mt-5">
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <form action="" method="POST" novalidate>
+                                <h2 class='text-center'>New Announcement</h2>
+                                {% csrf_token %}
+                                {% for form_details in announcement_form  %}
+                                    <div class="form-group">
+                                        {{ form_details.label_tag }}
+                                        {{ form_details }}
+                                        {{ form_details.errors }}
+                                    </div>
+                                {% endfor %}
+                                <button type="submit" class="btn btn-primary">Announce</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    {% if previous_announcements %}
-        {% for previous_announcement in previous_announcements %}
-            Announcement Number # {{ forloop.counter }} <br>
-            Subject: {{ previous_announcement.subject }} <br>
-            Details: {{ previous_announcement.details }}
-        {% endfor %}
-    {% endif %}
 
-    <br> <br>
-    
-    <a href="{% url "draftquizzes" %}">Draft Quizzes</a>
-    <br> <br>
-    {% for message in messages %}
-        {{message}}
-    {% endfor %}
+<div class="container-fluid mt-4">
+    <div class="row">
+        <div class="col-md-12">
+            {% if previous_announcements %}
+                <h3>Previous Announcements:</h3>
+                {% for previous_announcement in previous_announcements %}
+                    <div class="alert alert-info">
+                        <strong>Subject:</strong> {{ previous_announcement.subject }}<br>
+                        <strong>Details:</strong> {{ previous_announcement.details }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        </div>
+    </div>
+</div>
 
+
+<div class="container mt-4">
+    <div class="row mt-3">
+        <div class="col-md-6">
+            {% for message in messages %}
+                <div class="alert alert-success">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
 {% endblock content %}
